Enhance `CompanyOverviewComponent`, `ScreenerView`, and `MarketMapView`: integrate price summary bar, add floating selection bar, refine headers with tooltips, improve formatting and compact number handling, and update dialogs with close buttons. Expand `ViewHelper` with utilities for formatting and tooltips.